--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
   /* Full-screen layout */
   min-height: 100vh;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   text-transform: capitalize;
 
   /* Background gradient */
@@ -87,6 +87,7 @@ body {
   grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   grid-auto-rows: minmax(100px, auto);
   height: 80%;
+  width: 100%;
 }
 
 #cityname{
