--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   
-  overflow: hidden;
+  
 }
 
 /* Optional: weather card contrast */
@@ -81,13 +81,12 @@ body {
 
 #content{
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(2,1fr);
   gap: 20px;
   padding: 20px;
   grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   grid-auto-rows: minmax(100px, auto);
-  height: 80%;
-  width: 100%;
+  
 }
 
 #cityname{
@@ -108,7 +107,7 @@ body {
 }
 
 footer{
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   right: 0;
